add 3rd section

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
             <p class="font-italic my-0 py-0 h4">nisi erat porttitor li ___gula, eget lacinia odio sem nec elit.</p>
         </div>
     </section>
-    <section class="about pt-5">
+    <section class="about py-5">
         <div class="container">
             <div class="row ">
                 <div class="about-bgi col-md-4 d-flex flex-column  align-items-center text-monospace">
@@ -28,52 +28,44 @@
         </div>
 
     </section>
-    <section class="services">
+    <section class="services align-items-end">
         <div class="container">
-            <div class="row text-center">
+            <div class=" row text-center ">
                 <div class="col-md-8 text-secondary">
                     <div class="row">
-                        <div class="col-md-6 bg-secondary">
-                            <i class="fas fa-pencil-ruler"></i>
-                            <h4> GRAPHIC DESIGN</h4>
-                            <i>Cras mattis consectetur purus sit amet fermentum.    </i>
+                        <div class="col-md-6 services-block bg-dark">
+                            <i class="fas h2 fa-pencil-ruler"></i>
+                            <h4 class=""> GRAPHIC DESIGN</h4>
+                            <i class="h6">Cras mattis consectetur purus sit amet fermentum.    </i>
                         </div>
-                        <div class="col-md-6 bg-darks">
-                            <i class="fas fa-vector-square"></i>
-                            <h4>WEB DEVELOPMENT</h4>
-                            <i>Cras mattis consectetur purus sit amet fermentum.    </i>
+                        <div class="col-md-6 services-block bg-light">
+                            <i class="fas h2 fa-vector-square"></i>
+                            <h4 class="">WEB DEVELOPMENT</h4>
+                            <i class="h6">Cras mattis consectetur purus sit amet fermentum.    </i>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 bg-darks">
-                            <i class="fas fa-globe"></i>
-                            <h4>SEO & MARKETING</h4>
-                            <i>Cras mattis consectetur purus sit amet fermentum.    </i>
+                        <div class="col-md-6 services-block bg-light">
+                            <i class="fas h2 fa-globe"></i>
+                            <h4 class="">SEO & MARKETING</h4>
+                            <i class="h6">Cras mattis consectetur purus sit amet fermentum.    </i>
                         </div>
-                        <div class="col-md-6 bg-secondary">
-                            <i class="fas fa-mobile-alt"></i>
-                            <h4>MOBILE DEVELOPMENT</h4>
-                            <i>Cras mattis consectetur purus sit amet fermentum.    </i>
+                        <div class="col-md-6 services-block bg-dark">
+                            <i class="fas h2 fa-mobile-alt"></i>
+                            <h4 class="">MOBILE DEVELOPMENT</h4>
+                            <i class="h6">Cras mattis consectetur purus sit amet fermentum.    </i>
                         </div>
                     </div>
                 </div>
-                <div class="services-bgi col-md-4 text-white">
-                    <i class="fas fa-torah"></i>
-                    <h4>OUR SERVICES</h4>
-                    <i>“Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.”
+                <div class="services-bgi services-block col-md-4 text-white  ">
+                    <i class="fas  fa-torah h2"></i>
+                    <h4 class="">OUR SERVICES</h4>
+                    <i class="h6">“Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.”
                     </i>
-                    <p>- Borat -</p>
+                    <p><b>- Borat -</b></p>
 
                 </div>
-            </div>
-            <div class="row container">
-               
-                <!-- <div class="col-md-4">
-                    <i></i>
-                    <h4></h4>
-                    <p></p>
-                </div> -->
-            </div>
+            </div>            
         </div>
     </section>
     <section class="works">
