fixed: h1, logo,fonts in services

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
     <section class="hero">
         <div class="container text-center text-white">
             //= partials/_header.html
-            <h1 class="text-bold text-monospace text-uppercase mb-2 ">CreativE DIGITAL Project</h1>
+            <h1 class="font-weight-bold text-monospace text-uppercase mb-2 ">CreativE DIGITAL Project</h1>
             <p class="font-italic my-0 py-0 h4 ">Duis mollis, est non commodo luctus,</p>
             <p class="font-italic my-0 py-0 h4">nisi erat porttitor li ___gula, eget lacinia odio sem nec elit.</p>
         </div>
     </section>
     <section class="about py-5">
-        <div class="container">
+        <div class="container mb-4">
             <div class="row ">
                 <div class="about-bgi col-md-4 d-flex flex-column  align-items-center text-monospace">
                     <i class="fas fa-user-tie text-white h2 pb-3 pt-5"></i>
@@ -35,32 +35,32 @@
                     <div class="row">
                         <div class="col-md-6 services-block bg-dark">
                             <i class="fas h2 fa-pencil-ruler"></i>
-                            <h4 class=""> GRAPHIC DESIGN</h4>
+                            <h4 class="h5 font-weight-bold"> GRAPHIC DESIGN</h4>
                             <i class="h6">Cras mattis consectetur purus sit amet fermentum.    </i>
                         </div>
                         <div class="col-md-6 services-block bg-light">
                             <i class="fas h2 fa-vector-square"></i>
-                            <h4 class="">WEB DEVELOPMENT</h4>
+                            <h4 class="h5 font-weight-bold">WEB DEVELOPMENT</h4>
                             <i class="h6">Cras mattis consectetur purus sit amet fermentum.    </i>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 services-block bg-light">
                             <i class="fas h2 fa-globe"></i>
-                            <h4 class="">SEO & MARKETING</h4>
+                            <h4 class="h5 font-weight-bold">SEO & MARKETING</h4>
                             <i class="h6">Cras mattis consectetur purus sit amet fermentum.    </i>
                         </div>
                         <div class="col-md-6 services-block bg-dark">
                             <i class="fas h2 fa-mobile-alt"></i>
-                            <h4 class="">MOBILE DEVELOPMENT</h4>
+                            <h4 class="h5 font-weight-bold">MOBILE DEVELOPMENT</h4>
                             <i class="h6">Cras mattis consectetur purus sit amet fermentum.    </i>
                         </div>
                     </div>
                 </div>
-                <div class="services-bgi services-block col-md-4 text-white  ">
+                <div class="services-bgi services-block col-md-4 text-white px-3 ">
                     <i class="fas  fa-torah h2"></i>
-                    <h4 class="">OUR SERVICES</h4>
-                    <i class="h6">“Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.”
+                    <h4 class="h5 font-weight-bold text-monospace mb-3">OUR SERVICES</h4>
+                    <i class="h6 pt-5 m-0">“Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.”
                     </i>
                     <p><b>- Borat -</b></p>
 
