--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 //= partials/_head.html
 <body>
-    <section class="hero">
+    <section class="hero" id="hero">
         <div class="container text-center text-white">
             //= partials/_header.html
             <h1 class="font-weight-bold text-monospace text-uppercase mb-2 ">CreativE DIGITAL Project</h1>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="services-bgi services-block col-md-4 text-white px-3 ">
-                    <i class="fas  fa-torah h2"></i>
+                    <i class="fas pt-3 fa-torah h2"></i>
                     <h4 class="h5 font-weight-bold text-monospace mb-3">OUR SERVICES</h4>
                     <i class="h6 pt-5 m-0">“Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.”
                     </i>
@@ -117,7 +117,67 @@
                 <i class="fas fa-street-view my-4"></i>
                 <h2>meet our team</h2>
             </div>
-            <div id="carouselExampleControls" class="carousel slide text-center" data-ride="carousel">
+
+            <div class="slider" >
+                <div class="slide">
+                    <img src="img/photo1.png" alt="" class="slide-img">
+                    <div class="slide-person text-center">
+                        <h4 class="test-uppercase text-primary font-weight-bold">Miguel Obrien</h4>
+                        <p class="font-weight-italic">CEO & Founder</p>
+                    </div>
+                    <div class="links  bg-primary">
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-behance"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-instagram"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-google-plus-g"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-facebook"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="img/photo2.png" alt="" class="slide-img">
+                    <div class="slide-person text-center">
+                        <h4 class="test-uppercase text-primary font-weight-bold">Jackie Carroll</h4>
+                        <p class="font-weight-italic">Art Director</p>
+                    </div>
+                    <div class="links  bg-primary">
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-behance"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-instagram"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-google-plus-g"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-facebook"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="img/photo3.png" alt="" class="slide-img">
+                    <div class="slide-person text-center">
+                        <h4 class="test-uppercase text-primary font-weight-bold">Ida Morrison</h4>
+                        <p class="font-weight-italic">Designer</p>
+                    </div>
+                    <div class="links  bg-primary">
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-behance"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-instagram"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-google-plus-g"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-facebook"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="img/photo2.png" alt="" class="slide-img">
+                    <div class="slide-person text-center">
+                        <h4 class="test-uppercase text-primary font-weight-bold">Jackie Carroll2</h4>
+                        <p class="font-weight-italic">Art Director2</p>
+                    </div>
+                    <div class="links  bg-primary">
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-behance"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-instagram"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-google-plus-g"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-facebook"></i></a>
+                        <a href="#" class="link "><i class=" border-radiis bg-light fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div id="carouselExampleControls" class="carousel slide text-center" data-ride="carousel">
                 <div class="carousel-inner mx-auto">
                   <div class="carousel-item w-33 active">
                     <img class="d-block " src="img/photo1.png" alt="First slide">
@@ -148,7 +208,7 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
-              </div>
+              </div> -->
 
         </div>
     </section>
@@ -200,6 +260,7 @@
                 </div>
 
             </form>
+            <a href="#hero"><i class="fas fa-arrow-up mapmap-arrow text-white h2 d-flex align-items-center justify-content-center"> </i></a>
         </div>
     </section>
     //= partials/_footer.html
@@ -207,7 +268,7 @@
     //= partials/_sprite.html
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlBsh_1VBfFb2OUFAbE9W6TcIyeYyVxl0&callback=initMap"
     async defer></script> -->
-    <script src="js/main.min.js"></script>
     <script src="https://kit.fontawesome.com/20ed8529b5.js" crossorigin="anonymous" async></script>
+    <script src="js/main.min.js"></script>
 </body>
 </html>
