--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                 <i class="fas fa-pen-nib h2 my-4"></i>
                 <h2 class="mb-5">recent works</h2>
             </div>
-            <div id="carouselExampleIndicators" class="carousel slide mx-auto" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -83,16 +83,16 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/slide1.png" alt="First slide">
+                    <img class=" w-100" src="img/slide1.png" alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="img/slide2.png" alt="Second slide">
+                    <img class=" w-100" src="img/slide2.png" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="img/slide3.png" alt="Third slide">
+                    <img class=" w-100" src="img/slide3.png" alt="Third slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="img/slide4.png" alt="Third slide">
+                    <img class=" w-100" src="img/slide4.png" alt="Third slide">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
