--- a/src/index.html
+++ b/src/index.html
@@ -83,16 +83,16 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class=" w-100" src="img/slide1.png" alt="First slide">
+                    <img loading="lazy" class=" w-100" src="img/slide1.png" alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class=" w-100" src="img/slide2.png" alt="Second slide">
+                    <img loading="lazy" class=" w-100" src="img/slide2.png" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class=" w-100" src="img/slide3.png" alt="Third slide">
+                    <img loading="lazy" class=" w-100" src="img/slide3.png" alt="Third slide">
                   </div>
                   <div class="carousel-item">
-                    <img class=" w-100" src="img/slide4.png" alt="Third slide">
+                    <img loading="lazy" class=" w-100" src="img/slide4.png" alt="Third slide">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -116,9 +116,9 @@
                 <h2>meet our team</h2>
             </div>
 
-            <div class="slider" >
+            <div class="slider " >
                 <div class="slide ">
-                    <img src="img/photo1.png" alt="" class="slide-img">
+                    <img loading="lazy" src="img/photo1.png" alt="" class="slide-img">
                     <div class="slide-person text-center">
                         <h4 class="test-uppercase text-primary font-weight-bold">Miguel Obrien</h4>
                         <p class="font-italic">CEO & Founder</p>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="slide ">
-                    <img src="img/photo2.png" alt="" class="slide-img">
+                    <img loading="lazy" src="img/photo2.png" alt="" class="slide-img">
                     <div class="slide-person text-center">
                         <h4 class="test-uppercase text-primary font-weight-bold">Jackie Carroll</h4>
                         <p class="font-italic">Art Director</p>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="slide ">
-                    <img src="img/photo3.png" alt="" class="slide-img">
+                    <img loading="lazy" src="img/photo3.png" alt="" class="slide-img">
                     <div class="slide-person text-center">
                         <h4 class="test-uppercase text-primary font-weight-bold">Ida Morrison</h4>
                         <p class="font-italic">Designer</p>
@@ -160,7 +160,7 @@
                     </div>
                 </div>
                 <div class="slide ">
-                    <img src="img/photo2.png" alt="" class="slide-img">
+                    <img loading="lazy" src="img/photo2.png" alt="" class="slide-img">
                     <div class="slide-person text-center">
                         <h4 class="test-uppercase text-primary font-weight-bold">Jackie Carroll2</h4>
                         <p class="font-italic">Art Director2</p>
