adaptive forms btn-s and compressed img

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
             <p class="font-italic my-0 py-0 h4">nisi erat porttitor li ___gula, eget lacinia odio sem nec elit.</p>
         </div>
     </section>
-    <section class="about py-5">
+    <section id="About" class="about py-5">
         <div class="container mb-4">
             <div class="row ">
                 <div class="about-bgi col-md-4 d-flex flex-column  align-items-center text-monospace mx-auto">
                     <i class="fas fa-user-tie text-white h2 pb-3 pt-5"></i>
-                    <p class="text-uppercase  text-white h4 py-3"> about ut</p>
+                    <p class="text-uppercase  text-white h4 py-3"> about us</p>
                 </div>
                 <div class="text col-md-7 offset-md-1 mt-5 text-secondary">
                     <p class="py-2">Nullam quis risus eget urna mollis ornare vel eu leo. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
@@ -28,7 +28,7 @@
         </div>
 
     </section>
-    <section class="services align-items-end">
+    <section id="Services" class="services align-items-end">
         <div class="container">
             <div class=" row text-center ">
                 <div class="col-md-8 text-secondary">
@@ -68,7 +68,7 @@
             </div>            
         </div>
     </section>
-    <section class="works position-relative pb-3">
+    <section id="Works" class="works position-relative pb-3">
         <div class="container-md mb-5 pb-5">
             <div class="text-uppercase text-white text-center text-monospace">
                 <i class="fas fa-pen-nib h2 my-4"></i>
@@ -109,7 +109,7 @@
             <a href="#" class=" btn btn-outline-light px-4 py-2 font-italic">View Gallery</a>
         </div>
     </section>
-    <section class="team bg-light pb-4">
+    <section id="Team" class="team bg-light pb-4">
         <div class="container-md">
             <div class="h2 text-secondary text-uppercase text-center text-monospace ">
                 <i class="fas fa-street-view my-4"></i>
@@ -176,7 +176,7 @@
             </div>
         </div>
     </section>
-    <section class="mapmap position-relative">
+    <section class="mapmap position-relative pb-sm-4">
         <div id="map" class="position-absolute w-100 h-100 " style="z-index:-1; opacity: .6;"></div>
         <script>
             var map;
@@ -207,8 +207,8 @@
             
         </div>
 
-        <div class="container">
-            <form method="POST">
+        <div class="container mb-4 p-2">
+            <form method="POST" class="mb-5">
                 <div class="row p-2">
                     <input type="text" class="h6 font-italic p-3 text-white col-md-6 mr-0 d-inline-block" placeholder="Your Name *" type="text" required>
                     <input type="text" class="h6 font-italic p-3 text-white col-md-6 mr-0 d-inline-block" placeholder="Your Email *" type="email" required>
@@ -219,8 +219,8 @@
                     style="background-color: rgba(255,255,255, .5);" required></textarea>
                 </div>
 
-                <div class="row my-5">
-                    <button class="text-uppercase text-monospace text-white bg-primary col-md-4 offset-md-4 py-3 px-5 btn-primary font-weight-bold "> Send message</button>
+                <div class="row mb-5 mt-2">
+                    <button class="text-uppercase text-monospace text-white bg-primary col-md-4 offset-md-4 py-3 px-lg-5 px-md-3 btn-primary font-weight-bold "> Send message</button>
                 </div>
 
             </form>
