compressed other img-s

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
             //= partials/_header.html
             <h1 class="font-weight-bold text-monospace text-uppercase mb-2 ">CreativE DIGITAL Project</h1>
             <p class="font-italic my-0 py-0 h4 ">Duis mollis, est non commodo luctus,</p>
-            <p class="font-italic my-0 py-0 h4">nisi erat porttitor li ___gula, eget lacinia odio sem nec elit.</p>
+            <p class="font-italic my-0 py-0 h4">nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
     </section>
     <section id="About" class="about py-5">
@@ -109,7 +109,7 @@
             <a href="#" class=" btn btn-outline-light px-4 py-2 font-italic">View Gallery</a>
         </div>
     </section>
-    <section id="Team" class="team bg-light pb-4">
+    <section id="Contact" class="team bg-light pb-4">
         <div class="container-md">
             <div class="h2 text-secondary text-uppercase text-center text-monospace ">
                 <i class="fas fa-street-view my-4"></i>
@@ -187,7 +187,7 @@
                 });
             }
         </script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlBsh_1VBfFb2OUFAbE9W6TcIyeYyVxl0&callback=initMap"
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCub7pKRDZju62_aRtGlmMtl-T1LBthZL4&callback=initMap"
         async defer></script>
 
         <div class="container" style="z-index: 2;">
